try to fix error on mobile

--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ h2 {
     /* animation: animBackground 1s; */
 }
 
-@media only screen and (hover: none) and (pointer: coarse) {
+@media only screen and (hover: none) {
     .header #background {
         background-image: url(assets/img/header_mobile.png);
     }
